plug-ins: wait one second before calling webkit_web_view_get_snapshot()

See https://bugs.webkit.org/show_bug.cgi?id=164180